# cmakr

./: .gitignore  Cargo.toml  README.md
src/: cmake.rs  cmd.rs  lib.rs
test/: CMakeLists.txt  CMakePresets.json  Cargo.toml  build.rs  func.c  func.h
test/src/: main.rs
