[package]
name = "cmakr"
authors = ["Cora"]
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/CoraBlack/cmakr.git"
description = "Build dependence for build cmake project in build.rs"

[dependencies]
which = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"